--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,19 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
-# Remove ds_store files
-*.DS_Store
-
-# We don't need the node modules
+# dependencies
 client/spm/node_modules
+
+# production
+client/spm/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
