--- a/client/spm/package.json
+++ b/client/spm/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "material-ui": "^0.19.1",
+    "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.2.0",
